# ml-demo

./: .gitignore  .prettierignore  .prettierrc.json  AUTONOMOUS_TESTING.md  CHANGELOG.md  CI_CD_SUMMARY.md  ISSUE-REDESIGN.md  README.md  debug-ws.js  debug.html  eslint.config.js  index.html  jsdoc.json  lighthouserc.json  package-lock.json  package.json  playwright.config.js  run-demo.js  run-final-demo.js  test-charts.html  test-minimal.html  test.js  verify-demo.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: autonomous-testing.yml  ci.yml  dependencies.yml  deploy.yml  docs.yml  performance.yml  pre-merge.yml  visual-regression.yml
ml-server/: Cargo.toml
ml-server/benches/: inference.rs
ml-server/src/: main.rs  state.rs
ml-server/src/handlers/: mod.rs  rest.rs  websocket.rs
ml-server/src/ml/: engine.rs
ml-server/src/models/: anomaly.rs  fusion.rs  mod.rs  objects.rs  trajectory.rs
scripts/: enable-pages.sh  run-autonomous-tests.js
src/: main-lite.js  main-simple.js  main-websocket.js  main.js
src/models/: anomalyDetector.js  continuousLearner.js  objectDetector.js  sensorFusion.js  trajectoryPredictor.js
src/services/: mlWebSocket.js
src/visualization/: charts-safe.js  (+1 more)
tests/: autonomous-fixer.js  autonomous-runner.js  check-errors.spec.js  data-validation.spec.js  debug-charts.spec.js  demo-showcase.spec.js  diagnose.spec.js  e2e.spec.js  global-setup.js  global-teardown.js  observe-improvements.spec.js  performance.spec.js  test-generation.spec.js  test-integration.spec.js  test-recorder.js  visual-regression.spec.js
