[package]
name = "ml_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
axum-extra = { version = "0.9", features = ["typed-header"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# ML Libraries - Using simpler ML approach to avoid version conflicts
ndarray = "0.15"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
arc-swap = "1.7"
dashmap = "5.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "inference"
harness = false
